[package]
name = "peanut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-compression = { version = "0.4.4", features = ["zstd", "tokio"] }
clap = { version = "4.4.8", features = ["derive"] }
log = "0.4.20"
simplelog = "0.12.1"
time = { version = "0.3.30", default-features = false }
tokio = { version = "1.34.0", features = ["fs"] }
