[package]
name = "peanut"
version = "0.1.0"
edition = "2021"

[dependencies]
aead = { version = "0.5.2", features = ["stream", "arrayvec", "getrandom"] }
aes-gcm-siv = { version = "0.11.1", features = ["aes"], default-features = false }
anyhow = "1.0.75"
base64 = "0.21.5"
hex = "0.4.3"
nonce-extension = "0.1.2"
sha2 = "0.10.8"
zstd = "0.13.0"
